--- a/chatterbox.html
+++ b/chatterbox.html
@@ -39,6 +39,7 @@
     <script src="client/env/config.js"></script>
     <script src="client/scripts/parse.js"></script>
     <script src="client/scripts/rooms.js"></script>
+    <script src="client/scripts/roomView.js"></script>
     <script src="client/scripts/friends.js"></script>
     <script src="client/scripts/messages.js"></script>
     <script src="client/scripts/formView.js"></script>
